--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -62,12 +62,12 @@ h3 {
 }
     
 h4 {
-    font-size: var(--fs-500);
+    font-size: var(--fs-400);
     font-weight: 500;
 }
 
 h5{
-    font-size: var(--fs-400);
+    font-size: var(--fs-300);
     font-weight: 300;
 }
 
